# db-learn

./: .gitignore
lw1/: CMakeLists.txt  main.cpp
lw1/database/: CDatabaseConsoleProgram.cpp  CDatabaseConsoleProgram.h
lw1/lib/CSVparser-master/: CMakeLists.txt
lw1/tests/: tests.cpp  tests.h
lw3/: hotels.sql
lw4/: 4-medicine.sql  4-queries.sql  4-queries.txt
lw5/: 5-computer_parts.sql  5-queries.sql
lw6/: queries.txt
lw7/: queries.sql
lw8/: queries.sql
